# stylo_v002

./: .dockerignore  .env.client.template  .env.example  .gitignore  Dockerfile  Procfile  apps.txt  docker-compose.client.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  start_bench.sh
apps/brain/: README.md  pyproject.toml
apps/brain/brain/: agent.py  brain.js  brain_settings.py  chat.py  hooks.py
apps/brain/brain/ai/: agent.py  audit.py  context.py  context_builder.py  model_registry.py  system_prompt.py
apps/brain/brain/ai/providers/: anthropic_provider.py  base.py  openai_compat.py
apps/brain/brain/ai/tools/: definitions.py  executor.py
apps/brain/brain/api/: chat.py  context.py  gdpr.py
apps/brain/brain/public/css/: brain.css
apps/brain/brain/public/js/: brain.js
apps/india_compliance/: .editorconfig  .eslintignore  .eslintrc  .git-blame-ignore-revs  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .releaserc  .semgrepignore  README.md  commitlint.config.js  pyproject.toml
apps/india_compliance/.github/ISSUE_TEMPLATE/: bug_report.yaml
apps/india_compliance/.github/workflows/: codeql.yml  docs-required.yml  linters.yml  on_release.yml  semantic-commits.yml  server-tests.yml
apps/india_compliance/india_compliance/: __init__.py  boot.py  hooks.py  install.py  patches.txt  setup_wizard.py  test_patches.py
apps/india_compliance/india_compliance/audit_trail/client_scripts/: accounts_settings.js  customize_form.js
apps/india_compliance/india_compliance/audit_trail/constants/: custom_fields.py
apps/india_compliance/india_compliance/audit_trail/overrides/: customize_form.py  test_version.py
apps/india_compliance/india_compliance/desktop_icon/: gst_india.json  income_tax_india.json  india_compliance.json
apps/india_compliance/india_compliance/gst_india/: uninstall.py
apps/india_compliance/india_compliance/gst_india/api_classes/: base.py  public.py  taxpayer_base.py  taxpayer_e_invoice.py  taxpayer_returns.py  test_mask_sensitive_info.py
apps/india_compliance/india_compliance/gst_india/client_scripts/: address.js  company.js  delivery_note.js  e_invoice_actions.js  e_waybill_actions.js  e_waybill_applicability.js  expense_claim.js  item.js  item_tax_template.js  journal_entry.js  party.js  payment_entry.js  purchase_invoice.js  purchase_receipt.js  sales_invoice.js  sales_invoice_list.js  stock_entry.js  subcontracting_order.js  subcontracting_receipt.js
apps/india_compliance/india_compliance/patches/: check_version_compatibility.py
apps/india_compliance/india_compliance/tests/: __init__.py  erpnext_test_utils.py  test_records.json
apps/india_compliance/india_compliance/workspace_sidebar/: gst_india.json  income_tax_india.json
apps/stylo_migrator/: README.md  pyproject.toml  setup.py
apps/stylo_migrator/stylo_migrator/: api.py  hooks.py  modules.txt
apps/stylo_migrator/stylo_migrator/config/: desktop.py
apps/stylo_migrator/stylo_migrator/migrator/: ai_helper.py  connection.py  dependency_order.py  engine.py  fixup.py  migrate_custom.py  migrate_hr.py  schema_map.py  submitted_docs.py
(+1574 files in other folders)
